# sierra

./: .gitignore  CLAUDE.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
prompts/: system-prompt.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: requirements.txt
src-tauri/src/: config.rs  devices.rs  lib.rs  main.rs  prompts.rs  state.rs  util.rs
src-tauri/src/commands/: chat.rs  devices.rs  mod.rs  settings.rs  setup.rs  system.rs
src-tauri/src/services/: ha_client.rs  ha_ws.rs  installer.rs  llm.rs  mcp_server.rs  mod.rs  ollama.rs  process_manager.rs  tool_executor.rs
src-tauri/src/tools/: climate.rs  light.rs  media_player.rs  mod.rs  registry.rs  switch.rs
src/commands/: chat.ts  config.ts  devices.ts  index.ts  setup.ts
src/styles/: globals.css
src/views/: ChatView.tsx  DevicesView.tsx  SettingsView.tsx  SetupView.tsx
