[package]
name = "sierra"
version = "0.1.0"
description = "Sierra — a local smart home controller powered by LLM"
authors = ["you"]
edition = "2021"

[lib]
name = "sierra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
